Add description and solution to exercise 3.2 in lab 3.

--- a/lab_4/Solution.ipynb
+++ b/lab_4/Solution.ipynb
@@ -2,13 +2,97 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import scipy.spatial.distance as sp_dist\n",
     "import itertools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 3.2\n",
+    "Consider two vectors: `v1 = c(1,2,3,4,5,6)`, `v2 = c(-4,-5,-6,-6,6,7)`. Compute the distance between them using:\n",
+    "\n",
+    "* Euclidean metric\n",
+    "* Canberra metric\n",
+    "* Minkowski metrics (p = 2, p = 3)\n",
+    "* Manhattan metric\n",
+    "* Maximum metric\n",
+    "\n",
+    "Compare the results. Explain the similarity between distances in Euclidean metrics and the Minkowski one for p = 2, and the Manhattan metric and the Minkowski one for p = 1. Why R-computation is feasible even if the length of vectors is different?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v1 = np.asarray([1, 2, 3, 4, 5, 6])\n",
+    "v2 = np.asarray([-4, -5, -6, -6, 6, 7])\n",
+    "\n",
+    "# framework computations\n",
+    "sp_euclidean = sp_dist.euclidean(v1, v2)\n",
+    "sp_canberra = sp_dist.canberra(v1, v2)\n",
+    "sp_minkowski_p2 = sp_dist.minkowski(v1, v2, p=2)\n",
+    "sp_minkowski_p3 = sp_dist.minkowski(v1, v2, p=3)\n",
+    "sp_manhattan = sp_dist.cityblock(v1, v2)\n",
+    "sp_maximum = sp_dist.chebyshev(v1, v2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# own implementations\n",
+    "def euclidean(v1, v2):\n",
+    "    \"\"\"Computes the euclidean distance between vectors v1 and v2\"\"\"\n",
+    "    return np.sqrt(np.sum(np.square(v1 - v2)))\n",
+    "\n",
+    "def manhattan(v1, v2):\n",
+    "    \"\"\"Computes the manhattan (city block) distance between vectors v1 and v2\"\"\"\n",
+    "    return np.sum(np.abs(v1 - v2))\n",
+    "\n",
+    "def minkowski(v1, v2, p=2):\n",
+    "    \"\"\"Computes minkowski distance between vecotrs v1 and v2\"\"\"\n",
+    "    return np.power(np.sum(np.power(np.abs(v1 - v2), p)), 1/p)\n",
+    "\n",
+    "own_euclidean = euclidean(v1, v2)\n",
+    "own_manhattan = manhattan(v1, v2)\n",
+    "own_minkowski_p2 = minkowski(v1, v2, 2)\n",
+    "own_minkowski_p3 = minkowski(v1, v2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Framework results\t: euclidean=16.03, manhattan=33.00, minkowski_p2=16.03, minkowski_p3=13.00\n",
+      "Own results\t\t: euclidean=16.03, manhattan=33.00, minkowski_p2=16.03, minkowski_p3=13.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# present the results\n",
+    "print('Framework results\\t: euclidean={:.2f}, manhattan={:.2f}, minkowski_p2={:.2f}, minkowski_p3={:.2f}'.format(\n",
+    "    sp_euclidean, sp_manhattan, sp_minkowski_p2, sp_minkowski_p3\n",
+    "))\n",
+    "print('Own results\\t\\t: euclidean={:.2f}, manhattan={:.2f}, minkowski_p2={:.2f}, minkowski_p3={:.2f}'.format(\n",
+    "    own_euclidean, own_manhattan, own_minkowski_p2, own_minkowski_p3\n",
+    "))"
    ]
   },
   {
@@ -170,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
